<resources>
    <string name="app_name">My Application</string>
    <string name="network_test">Network Test</string>
    <string name="sync_provision_test">Sync Provision test</string>
    <string name="start_audio_test">Start Audio Test</string>
    <string name="stop_audio_test">Stop Audio Test</string>
    <string name="wlan_test">WLAN Test</string>
    <string name="sync_deprovision_test">Sync DeProvision test</string>
    <string name="editBrightness"> </string>
    <string name="brightness">Brightness Set</string>
    <string name="editvolume"> </string>
    <string name="mute_test">Volume Mute TEST</string>
    <string name="unmute_test">Volume UnMute TEST</string>
</resources>
