<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonAudioStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_audio_test" />

        <Button
            android:id="@+id/buttonAudioStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_audio_test" />

        <Button
            android:id="@+id/buttonMute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/mute_test" />

        <Button
            android:id="@+id/buttonWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wlan_test" />

        <Button
            android:id="@+id/buttonNW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_test" />

        <Button
            android:id="@+id/buttonProvision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_provision_test" />

        <Button
            android:id="@+id/buttonDeProvision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_deprovision_test" />

        <EditText
            android:id="@+id/editBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="[0-255]"
            android:ems="10"
            android:gravity="center"
            android:hint="Enter The Brightness [0–255]"
            android:inputType="number"
            android:text="@string/editBrightness" />

        <Button
            android:id="@+id/buttonBrightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/brightness" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>